kubernetes/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: ConnectionStrings__DefaultConnection
              value: Server=tcp:mssql,1433;Initial Catalog=RabbitMqDemo;Persist Security Info=False;User ID=sa;Password=P@ssw0rd2023!;Connection Timeout=30;
            - name: RabbitMQ__Hostname
              value: rabbitmq
            - name: RabbitMQ__Password
              value: admin
            - name: RabbitMQ__Username
              value: admin
          image: matthieuf/pubsub-api:1.2
          name: api
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
      restartPolicy: Always
